Fixed the alignment issue.

--- a/src/agent-page/agent-page.css
+++ b/src/agent-page/agent-page.css
@@ -20,6 +20,7 @@
 
   .agent{
     padding-left: 16%;
+    padding-top: 15px;
   }
   
   .buttonfriend{
